syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Frete";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service FreteService {
  rpc calculaFrete (CalculaFreteRequest) returns (CalculaFreteReply){}
}

message ErroDetails{
  int32 code = 1;
  string message = 2;
}

message CalculaFreteRequest {
  string cep = 1;
}

message CalculaFreteReply {
  string cep = 1;
  double valor = 2;
}